--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,6 @@ services:
       - .:/app
       - /app/node_modules
     ports:
-      - "8080:8080"
+      - "6969:6969"
     environment:
-      - MODE
+      - PORT=6969
