--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
     "dev": "nodemon -L src/server.js"
   },
   "dependencies": {
+    "@prisma/client": "^6.16.2",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "nodemon": "^3.1.3"
+    "express": "^4.21.2",
+    "nodemon": "^3.1.3",
+    "sqlite3": "^5.1.7"
+  },
+  "devDependencies": {
+    "prisma": "^6.16.2"
   }
 }
