--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@prisma/client": "^6.16.2",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.3",
     "sqlite3": "^5.1.7"
   },
