--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.3",
+    "prisma": "^6.16.2",
     "sqlite3": "^5.1.7"
-  },
-  "devDependencies": {
-    "prisma": "^6.16.2"
   }
 }
